<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="8dp"
    android:id="@+id/mainLayout2">
    <LinearLayout
        android:background="@drawable/card_view_2_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_id_2"
                android:textSize="25sp"
                android:textColor="@color/text_color_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/price_id_2"
                android:layout_width="wrap_content"
                android:textColor="@color/text_color_3"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="">

            </TextView>
            <TextView
                android:id="@+id/price_unit_2"

                android:layout_width="wrap_content"
                android:textColor="@color/text_color_3"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/lb">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/available"
                tools:ignore="SmallSp">

            </TextView>
            <TextView
                android:id="@+id/amount_unit_2"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/_0">

            </TextView>

        </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textSize="11sp"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:id="@+id/seller_id_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/seller_name">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginEnd="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="11sp"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:id="@+id/location_id_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/all_saints">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added"
                android:textSize="11sp"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:id="@+id/last_update_id_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/_2_days_ago">

            </TextView>

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>